--- a/src/paper/paper.tex
+++ b/src/paper/paper.tex
@@ -1,7 +1,6 @@
 \documentclass{article}
 \usepackage{import} % required to use relative path 
 \begin{document}
-This is just a test. The table looks horrible. 
-
+This is a test document to show table.
 \input{gen/paper/output/table1.tex}
 \end{document}
